--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -131,6 +131,6 @@ dmypy.json
 # PyCharm
 .idea/
 
-test/data/
+tests/data/
 
 .DS_Store
