--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -29,6 +29,8 @@ jobs:
         # exit-zeroはすべてのエラーを警告として扱う。 GitHubのエディタの幅は127文字
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+         COMET_API_KEY: ${{ secrets.COMET_API_KEY }}
       run: |
         pip install pytest
         pytest
