--- a/.github/workflows/ci-pytest.yaml
+++ b/.github/workflows/ci-pytest.yaml
@@ -30,7 +30,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       env:
-         COMET_API_KEY: key
+         COMET_API_KEY: {{ secrets.COMET_API_KEY }}
       run: |
         pip install pytest
         pytest
