--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,5 +10,9 @@ python:
    version: 3.7
    install:
      - requirements: docs/requirements.txt
+     - method: pip
+        path: .
+        extra_requirements:
+            - docs
      - method: setuptools
      path: .
