--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,5 +10,7 @@ python:
    version: 3.7
    install:
      - requirements: docs/requirements.txt
-     - method: pip
-       path: .
+
+     - method: setuptools
+       path: khirotaka/enchanter
+   system_packages: true
