--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,5 +12,5 @@ python:
      - requirements: docs/requirements.txt
 
      - method: setuptools
-       path: khirotaka/enchanter
+       path: .
    system_packages: true
