--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,8 +29,9 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ./requirements.txt
+          python3 -m pip install -r ./docs/requirements.txt
 
-      - run: mkdocs build
+      - run: make html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
