--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,13 +2,12 @@ version: 2
 
 sphinx:
   configuration: docs/conf.py
-  
-formats: 
-  - pdf
 
 python:
    version: 3.7
    install:
      - requirements: docs/requirements.txt
 
+     - method: setuptools
+       path: .
    system_packages: true
