--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,13 +1,6 @@
-version: 2
-
-sphinx:
-  configuration: docs/conf.py
+version: 1
 
 python:
    version: 3.7
-   install:
-     - requirements: docs/requirements.txt
-
-     - method: setuptools
-       path: .
-   system_packages: true
+   setup_py_install: true
+   requirements_file: docs/requirements.txt
