--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,12 @@
-version: 1
+version: 2
+
+sphinx:
+  configuration: docs/conf.py
+
 
 python:
    version: 3.7
-   setup_py_install: true
-   requirements_file: docs/requirements.txt
+   install:
+     - requirements: docs/requirements.txt
+     - method: pip
+       path: .
