--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,3 +10,5 @@ python:
      - requirements: docs/requirements.txt
      - method: pip
        path: .
+       extra_requirements:
+          - docs
