--- a/mypy.ini
+++ b/mypy.ini
@@ -5,3 +5,15 @@ ignore_missing_imports = True
 
 [mypy-numpy.*]
 ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-tqdm.*]
+ignore_missing_imports = True
+
+[mypy-comet_ml.*]
+ignore_missing_imports = True
+
+[mypy-IPython.*]
+ignore_missing_imports = True
