--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,17 +8,17 @@ COPY README.md /enchanter-build/
 COPY pyproject.toml /enchanter-build/
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
+    curl=7.64.1 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY docker/bashrc /etc/bash.bashrc
 RUN chmod a+rwx /etc/bash.bashrc
 RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
-RUN source $HOME/.poetry/env \
+RUN source ${HOME}/.poetry/env \
     && poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi
 
-ENV PATH $HOME/.poetry/bin:$PATH
+ENV PATH ${HOME}/.poetry/bin:${PATH}
 
 WORKDIR /workspace
 RUN chmod -R a+w .
