--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,26 @@ comet_ml = "^3.1.3"
 mxnet = "^1.6.0"
 pytest = "^6.0"
 flake8 = "^3.8"
+black = "^20.8b1"
+
+
+[tool.black]
+line-length = 99
+target-version = ["py36", "py37", "py38"]
+include = '\.pyi?$'
+exclude = '''
+
+(
+    migrations
+    | .mypy_cache
+    | .pytest_cache
+    | .github
+    | docker
+    | docs
+    | examples
+    | tests
+)
+'''
 
 
 [build-system]
