--- a/.github/workflows/ci-pytest.yaml
+++ b/.github/workflows/ci-pytest.yaml
@@ -34,8 +34,8 @@ jobs:
         run: |
           # Pythonの構文エラーもしくは未定義の名前があればビルドを停止
           poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zeroはすべてのエラーを警告として扱う。 GitHubのエディタの幅は127文字
-          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          # exit-zeroはすべてのエラーを警告として扱う。
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
 
       - name: Check code style with Black
         run : poetry run black --check --diff .
