--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
-mxnet = "^1.6.0"
+mxnet = "1.6.0"
 pytest = "^6.0"
 flake8 = "^3.8"
 black = "^20.8b1"
