--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
+tensorflow = "^2.3.0"
+tensorflow-datasets = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 torch = "^1.6"
@@ -26,7 +28,7 @@ tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
-mxnet = "^1.6.0"
+mxnet = "1.6.0"
 pytest = "^6.0"
 flake8 = "^3.8"
 
