--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Add path for Poetry
         run: echo "::add-path::$HOME/.poetry/bin"
       - name: Install Dependencies
-        run: poetry install --no-dev --no-interaction
+        run: |
+          poetry run pip install -U pip
+          poetry install --no-dev --no-interaction
 
       - name: Build and publish
         env:
