--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,13 @@ pandas = "^1.0"
 comet_ml = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
-torch = "^1.6"
-numpy = "^1.17"
-tqdm = "^4.41"
-tensorboard = "^2.1"
-pandas = "^1.0"
-comet_ml = "^3.1.3"
 mxnet = "^1.6.0"
 pytest = "^6.0"
 flake8 = "^3.8"
 black = "^20.8b1"
+sphinx-material = "^0.0.27"
+sphinx-copybutton = "^0.2.11"
+sphinx-autoapi = "1.5.0"
 
 
 [tool.black]
