--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ pandas = "^1.0"
 comet_ml = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
-mxnet = "^1.6.0"
+mxnet = "1.6.0"
 pytest = "^6.0"
 flake8 = "^3.8"
 black = "^20.8b1"
