--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "enchanter"
-version = "0.7.0a"
+version = "0.7.0b"
 description = "Enchanter is a library for machine learning tasks for comet.ml users."
 authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
 license = "Apache-2.0"
