--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pandas = "^1.0"
 comet_ml = "^3.1.3"
 tensorflow = "^2.3.0"
 tensorflow-datasets = "^3.2.1"
+netron = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
 mxnet = "1.6.0"
@@ -29,6 +30,7 @@ black = "^20.8b1"
 sphinx-material = "^0.0.30"
 sphinx-copybutton = "^0.3"
 sphinx-autoapi = "1.5.0"
+torchvision = "^0.7.0"
 
 
 [tool.black]
