--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,12 @@ ignore_missing_imports = True
 
 [mypy-IPython.*]
 ignore_missing_imports = True
+
+[mypy-netron.*]
+ignore_missing_imports = True
+
+[mypy-tensorflow.*]
+ignore_missing_imports = True
+
+[mypy-tensorflow_datasets.*]
+ignore_missing_imports = True
