--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "enchanter"
-version = "0.7.0rc1"
+version = "0.7.0"
 description = "Enchanter is a library for machine learning tasks for comet.ml users."
 authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
 license = "Apache-2.0"
@@ -18,7 +18,7 @@ tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
-netron = "^4.5.0"
+netron = "^4.5"
 
 
 [tool.poetry.dev-dependencies]
