--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/khirotaka/enchanter"
 keywords = ["pytorch", "comet_ml"]
 
 [tool.poetry.dependencies]
-python = "^3.6.5"
+python = ">=3.6.5,<3.8"
 torch = "^1.6"
 numpy = "^1.17"
 scikit-learn = "^0.23"
@@ -32,6 +32,7 @@ tensorflow-datasets = "^3.2.1"
 sphinx-material = "^0.0.32"
 sphinx-copybutton = "^0.3"
 sphinx-autoapi = "1.5.0"
+mypy = "^0.782"
 
 
 [tool.black]
