add pytest config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,12 @@ exclude = '''
 '''
 
 
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::UserWarning",
+    "ignore::DeprecationWarning",
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
 build-backend = "poetry.core.masonry.api"
