--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
 netron = "^4.5"
+typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 mxnet = "1.6.0"
@@ -31,13 +32,14 @@ flake8 = "^3.8"
 black = "^20.8b1"
 torchvision = "^0.7.0"
 tensorflow = "^2.3.0"
-tensorflow-datasets = "^4.0.0"
+tensorflow-datasets = "^4.0"
 sphinx-material = "^0.0.32"
 sphinx-copybutton = "^0.3"
 sphinx-autoapi = "1.5"
 mypy = "^0.790"
 tslearn = "^0.4.1"
 hydra-core = "^1.0.3"
+
 
 [tool.black]
 line-length = 120
@@ -56,6 +58,7 @@ exclude = '''
     | tests
 )
 '''
+
 
 [tool.pytest.ini_options]
 filterwarnings = [
