--- a/.github/workflows/ci-pytest.yaml
+++ b/.github/workflows/ci-pytest.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: Install Dependencies
         run: |
           poetry run pip install -U pip
+          poetry run pip install -U torch torchvision
           poetry install --no-interaction
 
       - name: Lint with flake8
