--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           poetry run pip install -U pip
+          poetry run pip install -U torch torchvision
           poetry install --no-dev --no-interaction
 
       - name: Build and publish
