--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,7 @@
 sphinx-material>=0.0.32
 
 sphinx-copybutton>=0.2.11
-sphinx-autoapi<1.6.0
+sphinx-autoapi>=1.5.0
 
+torch>=1.6.0
+torchvision>=0.7.0
