--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "enchanter"
-version = "0.8.1"
+version = "0.9.0"
 description = "Enchanter is a library for machine learning tasks for comet.ml users."
 authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
 license = "Apache-2.0"
@@ -14,7 +14,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.5,<3.9"
+python = "^3.6.5"
 numpy = "^1.17"
 scikit-learn = "^0.23"
 tqdm = "^4.41"
