--- a/.github/workflows/ci-pytest-mac.yaml
+++ b/.github/workflows/ci-pytest-mac.yaml
@@ -1,4 +1,4 @@
-name: CI Linux
+name: CI macOS
 
 on:
   push:
@@ -7,10 +7,11 @@ on:
 jobs:
   pytest:
 
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
+        os: [macos-10.15, macos-11.0]
 
     steps:
       - name: Checkout
