--- a/.github/workflows/ci-pytest-big-sur.yaml
+++ b/.github/workflows/ci-pytest-big-sur.yaml
@@ -7,10 +7,10 @@ on:
 jobs:
   pytest:
 
-    runs-on: macos-10.15
+    runs-on: macos-11.0
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7, 3.8]
 
     steps:
       - name: Checkout
