--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -24,28 +24,31 @@ jobs:
       - name: Install Poetry
         run: |
           (Invoke-WebRequest -Uri https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py -UseBasicParsing).Content | python -
-      - name: Add path for Poetry
-        run: echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
       - name: Install Dependencies
         run: |
+          echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pip install -U pip
           poetry run pip install -U torch==1.7.0+cpu torchvision==0.8.1+cpu torchaudio===0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
           poetry install --no-interaction
 
       - name: Lint with flake8
         run: |
+          echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           # Pythonの構文エラーもしくは未定義の名前があればビルドを停止
           poetry run flake8 enchanter/ --count --select=E9,F63,F7,F82,E203 --show-source --statistics
           # exit-zeroはすべてのエラーを警告として扱う。
           poetry run flake8 enchanter/ --count --exit-zero --max-complexity=22 --max-line-length=120 --statistics
 
       - name: Check code style with Black
-        run : poetry run black --check --diff .
+        run : |
+          poetry run black --check --diff .
+          echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
 
       - name: Test with pytest
         env:
            COMET_API_KEY: ${{ secrets.COMET_API_KEY }}
         run: |
+          echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pytest --durations=10 tests/
           poetry run pytest --durations=10 tests/tasks/classification_with_comet.py
           poetry run pytest --durations=10 tests/tasks/regression_with_comet.py
