--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "enchanter"
-version = "0.8.1"
+version = "1.0.0"
 description = "Enchanter is a library for machine learning tasks for comet.ml users."
 authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
 license = "Apache-2.0"
@@ -14,7 +14,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.5,<3.9"
+python = ">=3.7,<4.0"
 numpy = "^1.17"
 scikit-learn = ">=0.23,<0.25"
 tqdm = "^4.41"
@@ -22,6 +22,7 @@ tensorboard = "^2.1"
 pandas = "^1.0"
 comet_ml = "^3.1.3"
 netron = "^4.5"
+pytorch-lightning = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 mxnet = "1.7.0.post2"
@@ -40,7 +41,7 @@ hydra-core = "^1.0.3"
 
 [tool.black]
 line-length = 120
-target-version = ["py36", "py37", "py38"]
+target-version = ["py37", "py38", "py39"]
 include = '\.pyi?$'
 exclude = '''
 
