--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ scikit-learn = ">=0.23,<0.25"
 tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
-comet_ml = "^3.1.3"
 netron = "^4.5"
+comet_ml = { version = "^3.1.3", optional = true }
 
 [tool.poetry.dev-dependencies]
 mxnet = "1.7.0.post2"
@@ -37,6 +37,8 @@ mypy = "^0.812"
 tslearn = "^0.5.0"
 hydra-core = "^1.0.3"
 
+[tool.poetry.extras]
+comet = ["comet_ml"]
 
 [tool.black]
 line-length = 120
