--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -65,11 +65,16 @@ jobs:
         shell: bash
         
       - name: Test with pytest
-        env:
-           COMET_API_KEY: ${{ secrets.COMET_API_KEY }}
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pytest --durations=10 tests/
+        shell: bash
+
+      - name: Test when using Comet
+        if: "matrix.comet == true"
+        env:
+          COMET_API_KEY: ${{ secrets.COMET_API_KEY }}
+        run: |
           poetry run pytest --durations=10 tests/tasks/classification_with_comet.py
           poetry run pytest --durations=10 tests/tasks/regression_with_comet.py
         shell: bash
