--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -77,4 +77,5 @@ jobs:
         run: |
           poetry run pytest --durations=10 tests/tasks/classification_with_comet.py
           poetry run pytest --durations=10 tests/tasks/regression_with_comet.py
+          poetry run pytest --durations=10 tests/utils/comet_support.py
         shell: bash
