--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ mxnet = "1.7.0.post2"
 pytest = "^6.0"
 flake8 = "^3.8"
 black = "^20.8b1"
-tensorflow = "^2.3.0"
+tensorflow = { version = "^2.3.0", allow-prereleases = true }
 tensorflow-datasets = "^4.0"
 sphinx-material = "^0.0.32"
 sphinx-copybutton = "^0.3"
