--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -36,6 +36,7 @@ jobs:
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pip install -U pip
+          poetry run pip install tensorflow tensorflow-datasets
           poetry run pip install -U torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
           poetry install --no-interaction
         shell: bash
@@ -45,6 +46,7 @@ jobs:
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pip install -U pip
+          poetry run pip install tensorflow tensorflow-datasets mxnet
           poetry run pip install -U torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
           poetry install --no-interaction --extras comet
         shell: bash
