--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -35,9 +35,9 @@ jobs:
         if: "matrix.comet == false"
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
-          poetry run pip install -U pip
-          poetry run pip install tensorflow tensorflow-datasets
-          poetry run pip install -U torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+          poetry run pip install -U --user pip
+          poetry run pip install --user tensorflow tensorflow-datasets
+          poetry run pip install -U --user torch torchvision
           poetry install --no-interaction
         shell: bash
 
@@ -45,9 +45,9 @@ jobs:
         if: "matrix.comet == true"
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
-          poetry run pip install -U pip
-          poetry run pip install tensorflow tensorflow-datasets mxnet
-          poetry run pip install -U torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+          poetry run pip install -U --user pip
+          poetry run pip install --user tensorflow tensorflow-datasets mxnet
+          poetry run pip install --user -U torch torchvision
           poetry install --no-interaction --extras comet
         shell: bash
         
