--- a/.github/workflows/ci-pytest-mac.yaml
+++ b/.github/workflows/ci-pytest-mac.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |
           poetry run pip install -U pip
           poetry run pip install -U torch torchvision
-          poetry run pip install tensorflow tensorflow-datasets
+          poetry run pip install tensorflow tensorflow-datasets mxnet
           poetry install --no-interaction --extras comet
 
       - name: Lint with flake8
