--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
           poetry run pip install -U --user pip
-          poetry run pip install --user tensorflow tensorflow-datasets
+          poetry run pip install --user tensorflow tensorflow-datasets mxnet
           poetry run pip install -U --user torch torchvision
           poetry install --no-interaction
         shell: bash
