--- a/.github/workflows/ci-pytest-win.yaml
+++ b/.github/workflows/ci-pytest-win.yaml
@@ -45,9 +45,9 @@ jobs:
         if: "matrix.comet == true"
         run: |
           echo "$env:USERPROFILE\.poetry\bin" >> $GITHUB_PATH
-          poetry run pip install -U --user pip
-          poetry run pip install --user tensorflow tensorflow-datasets mxnet
-          poetry run pip install --user -U torch torchvision
+          poetry run pip install -U pip
+          poetry run pip install tensorflow tensorflow-datasets mxnet
+          poetry run pip install -U torch torchvision
           poetry install --no-interaction --extras comet
         shell: bash
         
