--- a/.github/workflows/ci-pytest-mac.yaml
+++ b/.github/workflows/ci-pytest-mac.yaml
@@ -7,11 +7,11 @@ on:
 jobs:
   pytest:
 
-    runs-on: macos-10.15
+    runs-on: macos-latest
     strategy:
       matrix:
         comet: [true, false]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10, 3.11]
 
     steps:
       - name: Checkout
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+          curl -sSL https://install.python-poetry.org | python3 -
       - name: Add path for Poetry
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
 
