--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ scikit-learn = ">=0.23,<1.1"
 tqdm = "^4.41"
 tensorboard = "^2.1"
 pandas = "^1.0"
-netron = { version = "^4.5", optional = true }
+netron = { version = ">=6.0.0", optional = true }
 comet_ml = { version = "^3.1.3", optional = true }
 
 [tool.poetry.dev-dependencies]
